// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`composition hook should return with Stack props 1`] = `
Object {
  "className": "css-ucri7v css-1pwrqjj css-1yuzjtp fp-Box fp-Stack",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 test fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`defaultProps should render correctly for orientation 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (min-width:768px) {
  .emotion-4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .emotion-4 > * {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .emotion-4 > *:not(:last-child) {
    margin-right: 2rem;
  }
}

@media screen and (max-width:768px) {
  .emotion-4.emotion-4 > *:not(:last-child) {
    margin-bottom: 2rem;
  }
}

<div
  class="emotion-4 emotion-0 emotion-1 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides Stack.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-4 {
  background-color: #ff0000;
}

<div
  class="emotion-4 emotion-0 emotion-1 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides Stack.child.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides Stack.child.horizontal should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (min-width:768px) {
  .emotion-4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .emotion-4 > * {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .emotion-4 > *:not(:last-child) {
    margin-right: 2rem;
  }

  .emotion-4 > *:not(:last-child) {
    background-color: #ff0000;
  }
}

@media screen and (max-width:768px) {
  .emotion-4.emotion-4 > *:not(:last-child) {
    margin-bottom: 2rem;
  }
}

<div
  class="emotion-4 emotion-0 emotion-1 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides Stack.child.vertical should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  background-color: #ff0000;
}

<div
  class="emotion-4 emotion-0 emotion-1 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides Stack.horizontal should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (min-width:768px) {
  .emotion-4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .emotion-4 > * {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .emotion-4 > *:not(:last-child) {
    margin-right: 2rem;
  }

  .emotion-4 {
    background-color: #ff0000;
  }
}

@media screen and (max-width:768px) {
  .emotion-4.emotion-4 > *:not(:last-child) {
    margin-bottom: 2rem;
  }
}

<div
  class="emotion-4 emotion-0 emotion-1 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides Stack.vertical should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-4 {
  background-color: #ff0000;
}

<div
  class="emotion-4 emotion-0 emotion-1 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for a horizontal set 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (min-width:768px) {
  .emotion-4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .emotion-4 > * {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .emotion-4 > *:not(:last-child) {
    margin-right: 2rem;
  }
}

@media screen and (max-width:768px) {
  .emotion-4.emotion-4 > *:not(:last-child) {
    margin-bottom: 2rem;
  }
}

<div
  class="emotion-4 emotion-0 emotion-1 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for a horizontal set with breakpoint 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (min-width:1024px) {
  .emotion-4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .emotion-4 > * {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .emotion-4 > *:not(:last-child) {
    margin-right: 2rem;
  }
}

@media screen and (max-width:1024px) {
  .emotion-4.emotion-4 > *:not(:last-child) {
    margin-bottom: 2rem;
  }
}

<div
  class="emotion-4 emotion-0 emotion-1 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for an alignX of center 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="emotion-4 emotion-0 emotion-6 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for an alignX of left 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<div
  class="emotion-4 emotion-0 emotion-6 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for an alignX of right 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

<div
  class="emotion-4 emotion-0 emotion-6 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for an alignY of bottom 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
  class="emotion-4 emotion-0 emotion-6 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for an alignY of center 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="emotion-4 emotion-0 emotion-6 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for an alignY of top 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

<div
  class="emotion-4 emotion-0 emotion-6 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-6 {
  color: #574feb !important;
}

<div
  class="emotion-4 emotion-0 emotion-6 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`theming Stack.styles.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-4 {
  background-color: #ff0000;
}

<div
  class="emotion-4 emotion-0 emotion-1 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`theming Stack.styles.child.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`theming Stack.styles.child.horizontal should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`theming Stack.styles.child.vertical should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  background-color: #ff0000;
}

<div
  class="emotion-4 emotion-0 emotion-1 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`theming Stack.styles.horizontal should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`theming Stack.styles.vertical should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-4 {
  background-color: #ff0000;
}

<div
  class="emotion-4 emotion-0 emotion-1 fp-Box fp-Stack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;
